# chess

./: .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  README.md  advanced_chess.html  bot_vs_bot.py  bot_vs_bot_clean.py  chess_com_style.py  chess_engine_clean.py  chess_ui_advanced.py  chess_ui_enhanced.py  demo.py  env.example  launch_chess.py  launch_web_chess.py  package-lock.json  package.json  pyproject.toml  quick_demo.py  remove_emojis.py  requirements.txt  run_all.py  run_chess.py  run_chess_clean.py  run_chess_final.py  run_chess_working.py  setup.py  setup_clean.py  setup_nextjs.py  simple_chess.py  start_chess.bat  start_chess.py  start_chess.sh  tailwind.config.js  test_chess.py  tournament.py  visual_chess_engine.py  visualize_chess.py  web_chess.html
app/: globals.css  layout.tsx  page.tsx
chessai/: __init__.py
chessai/api/: __init__.py  app.py  schemas.py
chessai/configs/: eval.yaml  rl.yaml  supervised.yaml
chessai/engine/: __init__.py  evaluation.py  move_index.py  search_alphabeta.py  search_mcts.py  time_manager.py  uci_adapter.py
chessai/models/: __init__.py  nnue_head.py  policy_value.py
chessai/notebooks/: exploration.ipynb
chessai/scripts/: __init__.py  download_pgns.py  match.py  pgn_to_tfrecords.py  report.py  selfplay.py
chessai/tests/: __init__.py  test_indexing.py  test_moves.py  test_search_invariants.py
chessai/training/: __init__.py  dataset.py  losses.py  scheduler.py  train_rl.py  (+1 more)
components/: ChessBoard.tsx  GameControls.tsx  GameStatus.tsx  MoveLog.tsx  PlayerInfo.tsx
hooks/: useChessGame.ts
types/: chess.ts
(+8 files in other folders)
